# N2O_aeration_simulation

./: README.md
n2o-aeration-model/: README.md  main.py  pyproject.toml  requirements.txt
n2o-aeration-model/app/: streamlit_app.py
n2o-aeration-model/configs/: base_case.yaml  dynamic_do.yaml  high_do.yaml  low_do.yaml  medium_do.yaml
n2o-aeration-model/data/: references.md
n2o-aeration-model/results/comparison/: comparison_summary.csv
n2o-aeration-model/scripts/: run_app.py  run_baseline.py  run_optimization.py  run_scenarios.py
n2o-aeration-model/src/n2o_model/: __init__.py  aeration.py  controller.py  interactive.py  kinetics.py  optimizer.py  parameters.py  plotting.py  process_model.py  scenarios.py  simulator.py  states.py  utils.py
